<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageProfile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/vinh"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/txtNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/idCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/scoreBorrowed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borrowed"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/scoreExpired"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expired"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/scoreFinish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/finish"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/mercury"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/application"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:id="@+id/txtProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_insert_drive_file_24"
                android:drawablePadding="20dp"
                android:text="@string/file"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtPromissoryNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_event_note_24"
                android:drawablePadding="20dp"
                android:text="@string/promissory_note"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/mercury"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/connect"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_error_outline_24"
                android:drawablePadding="20dp"
                android:text="@string/product_introduction"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_import_contacts_24"
                android:drawablePadding="20dp"
                android:text="@string/rules"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_share_24"
                android:drawablePadding="20dp"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_public_24"
                android:drawablePadding="20dp"
                android:text="@string/follow_me"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView

                android:id="@+id/idLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_subdirectory_arrow_right_24"
                android:drawablePadding="20dp"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>