<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowBorrowDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_500sdp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/form_code"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFormCodeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/textView21"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView21"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/borrower"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBorrower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView21"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView26"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView26"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/student_code"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtStudentCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView26"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tx"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/book_name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/txt"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/book_code"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtBookCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textView37"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/borrow_read"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rdg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/textView41"
                android:layout_marginTop="10dp"
                android:background="@color/polar"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radioInPlace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/in_place"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioCarriedAway"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/carried_away"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/textView37"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1
"
                    android:text="@string/date_create"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView47"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/date_pay"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/ll1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edtDateCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                    android:ems="10"
                    android:inputType="date"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtDatePay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_baseline_calendar_today_24"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/rdg"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btn"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_btn"
                    android:text="@string/delete" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll3"
                android:layout_marginTop="59dp"
                android:text="@string/rules_"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>